# sol-digduel

./: .cspell.json  .env.example  CHANGELOG.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
public/: manifest.json  sw.js  workbox-1bb06f5e.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: CustomDock.tsx  MainMenu.tsx  Minesweeper.tsx  Timer.tsx  TooltipWrapper.tsx  Web3Connect.tsx
src/components/magicui/: confetti.tsx  dock.tsx  particles.tsx  shimmer-button.tsx  sparkles-text.tsx
src/components/mainmenu/: AchievementCard.tsx  QuestCard.tsx
src/components/modal/: AchievementModal.tsx  GameResultModal.tsx  MultiplayerModal.tsx  QuestModal.tsx  SettingsModal.tsx  SingleplayerModal.tsx
src/components/ui/: alert.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  tabs.tsx
src/configs/: game.tsx  index.ts  metadata.ts  mock.ts  settings.ts
src/hooks/: useTranslation.tsx
src/lib/: utils.ts
src/locales/: en.json  jp.json  th.json  vi.json  zh.json
src/providers/: FontProvider.tsx  LanguageProvider.tsx  SolanaProvider.tsx  ThemeProvider.tsx  Web3Provider.tsx
src/stores/: commonStore.ts  gameStore.ts  index.ts  languageStore.ts  settingStore.ts  walletStore.ts
src/types/: css.d.ts  index.d.ts  store.d.ts
src/utils/: discord-webhook.ts
